Add delete comic
